[package]
name = "rust_cqrs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Webフレームワーク
actix-web = "4"

# GraphQL API
async-graphql = "6"
async-graphql-actix-web = "6"

# ORM (Prisma 風)
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }

# 非同期処理
tokio = { version = "1", features = ["full"] }

# JSONシリアライズ
serde = { version = "1", features = ["derive"] }

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
